samples/_failures_safe/1761310690_13eccc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_157aa9dc.c: In function ‘main’:
./samples/SAFE/__tmp_157aa9dc.c:183:5: error: expected ‘while’ at end of input
  183 |     }
      |     ^
./samples/SAFE/__tmp_157aa9dc.c:183:5: error: expected declaration or statement at end of input
